Compiler und Interpreter/Praktikum 1/output/minipParser.java
// $ANTLR 3.4 E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g 2014-04-13 10:20:56

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class minipParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOLEAN", "CHAR", "COMMENT", "ESC_SEQ", "EXPONENT", "HEX_DIGIT", "ID", "INTEGER", "K_BEGIN", "K_BOOLEAN", "K_DO", "K_ELSE", "K_END", "K_FI", "K_IF", "K_INTEGER", "K_OD", "K_PRINTLN", "K_PROGRAM", "K_READ", "K_REAL", "K_SEM", "K_STRING", "K_THEN", "K_WHILE", "OCTAL_ESC", "OP_LOGICAL", "OP_PRAEDICATE", "REAL", "STRING", "UNICODE_ESC", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "':='"
    };

    public static final int EOF=-1;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int BOOLEAN=4;
    public static final int CHAR=5;
    public static final int COMMENT=6;
    public static final int ESC_SEQ=7;
    public static final int EXPONENT=8;
    public static final int HEX_DIGIT=9;
    public static final int ID=10;
    public static final int INTEGER=11;
    public static final int K_BEGIN=12;
    public static final int K_BOOLEAN=13;
    public static final int K_DO=14;
    public static final int K_ELSE=15;
    public static final int K_END=16;
    public static final int K_FI=17;
    public static final int K_IF=18;
    public static final int K_INTEGER=19;
    public static final int K_OD=20;
    public static final int K_PRINTLN=21;
    public static final int K_PROGRAM=22;
    public static final int K_READ=23;
    public static final int K_REAL=24;
    public static final int K_SEM=25;
    public static final int K_STRING=26;
    public static final int K_THEN=27;
    public static final int K_WHILE=28;
    public static final int OCTAL_ESC=29;
    public static final int OP_LOGICAL=30;
    public static final int OP_PRAEDICATE=31;
    public static final int REAL=32;
    public static final int STRING=33;
    public static final int UNICODE_ESC=34;
    public static final int WS=35;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "factor", "whileControl", "term", "definition__", "praedicats", 
    "definition", "ifControl", "idList", "start", "declarations", "praedicate", 
    "commands", "flowControl", "praedicate_", "praedicats_", "read", "arith", 
    "arith_", "command", "term_", "declaration", "definition_", "print"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public minipParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public minipParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public minipParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return minipParser.tokenNames; }
    public String getGrammarFileName() { return "E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g"; }



    // $ANTLR start "start"
    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:3:1: start : K_PROGRAM declarations K_BEGIN commands K_END ;
    public final void start() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "start");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(3, 0);

        try {
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:3:7: ( K_PROGRAM declarations K_BEGIN commands K_END )
            dbg.enterAlt(1);

            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:3:9: K_PROGRAM declarations K_BEGIN commands K_END
            {
            dbg.location(3,9);
            match(input,K_PROGRAM,FOLLOW_K_PROGRAM_in_start10); 
            dbg.location(3,19);
            pushFollow(FOLLOW_declarations_in_start12);
            declarations();

            state._fsp--;

            dbg.location(3,32);
            match(input,K_BEGIN,FOLLOW_K_BEGIN_in_start14); 
            dbg.location(3,40);
            pushFollow(FOLLOW_commands_in_start16);
            commands();

            state._fsp--;

            dbg.location(3,49);
            match(input,K_END,FOLLOW_K_END_in_start18); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(4, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "start");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "start"



    // $ANTLR start "declarations"
    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:6:1: declarations : ( declaration )* ;
    public final void declarations() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declarations");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(6, 0);

        try {
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:7:2: ( ( declaration )* )
            dbg.enterAlt(1);

            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:7:4: ( declaration )*
            {
            dbg.location(7,4);
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:7:4: ( declaration )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==K_BOOLEAN||LA1_0==K_INTEGER||LA1_0==K_REAL||LA1_0==K_STRING) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:7:4: declaration
            	    {
            	    dbg.location(7,4);
            	    pushFollow(FOLLOW_declaration_in_declarations30);
            	    declaration();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(8, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declarations");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declarations"



    // $ANTLR start "declaration"
    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:10:1: declaration : ( K_INTEGER | K_REAL | K_STRING | K_BOOLEAN ) idList K_SEM ;
    public final void declaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(10, 0);

        try {
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:11:2: ( ( K_INTEGER | K_REAL | K_STRING | K_BOOLEAN ) idList K_SEM )
            dbg.enterAlt(1);

            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:11:4: ( K_INTEGER | K_REAL | K_STRING | K_BOOLEAN ) idList K_SEM
            {
            dbg.location(11,4);
            if ( input.LA(1)==K_BOOLEAN||input.LA(1)==K_INTEGER||input.LA(1)==K_REAL||input.LA(1)==K_STRING ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }

            dbg.location(11,48);
            pushFollow(FOLLOW_idList_in_declaration58);
            idList();

            state._fsp--;

            dbg.location(11,55);
            match(input,K_SEM,FOLLOW_K_SEM_in_declaration60); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(12, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declaration"



    // $ANTLR start "idList"
    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:14:1: idList : ID ( ',' ID )* ;
    public final void idList() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "idList");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(14, 0);

        try {
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:14:8: ( ID ( ',' ID )* )
            dbg.enterAlt(1);

            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:14:10: ID ( ',' ID )*
            {
            dbg.location(14,10);
            match(input,ID,FOLLOW_ID_in_idList71); 
            dbg.location(14,13);
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:14:13: ( ',' ID )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==40) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:14:14: ',' ID
            	    {
            	    dbg.location(14,14);
            	    match(input,40,FOLLOW_40_in_idList74); 
            	    dbg.location(14,18);
            	    match(input,ID,FOLLOW_ID_in_idList76); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(15, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "idList");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "idList"



    // $ANTLR start "commands"
    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:17:1: commands : ( command K_SEM | flowControl )+ ;
    public final void commands() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "commands");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(17, 0);

        try {
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:17:9: ( ( command K_SEM | flowControl )+ )
            dbg.enterAlt(1);

            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:17:11: ( command K_SEM | flowControl )+
            {
            dbg.location(17,11);
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:17:11: ( command K_SEM | flowControl )+
            int cnt3=0;
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=3;
                try { dbg.enterDecision(3, decisionCanBacktrack[3]);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||LA3_0==K_PRINTLN||LA3_0==K_READ) ) {
                    alt3=1;
                }
                else if ( (LA3_0==K_IF||LA3_0==K_WHILE) ) {
                    alt3=2;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:17:12: command K_SEM
            	    {
            	    dbg.location(17,12);
            	    pushFollow(FOLLOW_command_in_commands89);
            	    command();

            	    state._fsp--;

            	    dbg.location(17,20);
            	    match(input,K_SEM,FOLLOW_K_SEM_in_commands91); 

            	    }
            	    break;
            	case 2 :
            	    dbg.enterAlt(2);

            	    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:17:28: flowControl
            	    {
            	    dbg.location(17,28);
            	    pushFollow(FOLLOW_flowControl_in_commands95);
            	    flowControl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt3++;
            } while (true);
            } finally {dbg.exitSubRule(3);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(19, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "commands");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "commands"



    // $ANTLR start "command"
    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:21:1: command : ( definition | read | print );
    public final void command() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "command");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(21, 0);

        try {
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:21:9: ( definition | read | print )
            int alt4=3;
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            switch ( input.LA(1) ) {
            case ID:
                {
                alt4=1;
                }
                break;
            case K_READ:
                {
                alt4=2;
                }
                break;
            case K_PRINTLN:
                {
                alt4=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:21:11: definition
                    {
                    dbg.location(21,11);
                    pushFollow(FOLLOW_definition_in_command109);
                    definition();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:21:24: read
                    {
                    dbg.location(21,24);
                    pushFollow(FOLLOW_read_in_command113);
                    read();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:21:31: print
                    {
                    dbg.location(21,31);
                    pushFollow(FOLLOW_print_in_command117);
                    print();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(22, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "command");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "command"



    // $ANTLR start "flowControl"
    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:24:1: flowControl : ( ifControl | whileControl );
    public final void flowControl() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "flowControl");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(24, 0);

        try {
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:25:2: ( ifControl | whileControl )
            int alt5=2;
            try { dbg.enterDecision(5, decisionCanBacktrack[5]);

            int LA5_0 = input.LA(1);

            if ( (LA5_0==K_IF) ) {
                alt5=1;
            }
            else if ( (LA5_0==K_WHILE) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:25:4: ifControl
                    {
                    dbg.location(25,4);
                    pushFollow(FOLLOW_ifControl_in_flowControl129);
                    ifControl();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:25:16: whileControl
                    {
                    dbg.location(25,16);
                    pushFollow(FOLLOW_whileControl_in_flowControl133);
                    whileControl();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(26, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "flowControl");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "flowControl"



    // $ANTLR start "definition"
    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:28:1: definition : ID ':=' ( STRING | BOOLEAN ( praedicats_ )? | ID definition__ | '(' arith ')' ( arith_ | term_ )? | INTEGER definition_ | REAL definition_ ) ;
    public final void definition() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "definition");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(28, 0);

        try {
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:29:2: ( ID ':=' ( STRING | BOOLEAN ( praedicats_ )? | ID definition__ | '(' arith ')' ( arith_ | term_ )? | INTEGER definition_ | REAL definition_ ) )
            dbg.enterAlt(1);

            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:29:4: ID ':=' ( STRING | BOOLEAN ( praedicats_ )? | ID definition__ | '(' arith ')' ( arith_ | term_ )? | INTEGER definition_ | REAL definition_ )
            {
            dbg.location(29,4);
            match(input,ID,FOLLOW_ID_in_definition145); 
            dbg.location(29,7);
            match(input,43,FOLLOW_43_in_definition147); 
            dbg.location(30,2);
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:30:2: ( STRING | BOOLEAN ( praedicats_ )? | ID definition__ | '(' arith ')' ( arith_ | term_ )? | INTEGER definition_ | REAL definition_ )
            int alt8=6;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8, decisionCanBacktrack[8]);

            switch ( input.LA(1) ) {
            case STRING:
                {
                alt8=1;
                }
                break;
            case BOOLEAN:
                {
                alt8=2;
                }
                break;
            case ID:
                {
                alt8=3;
                }
                break;
            case 36:
                {
                alt8=4;
                }
                break;
            case INTEGER:
                {
                alt8=5;
                }
                break;
            case REAL:
                {
                alt8=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:30:3: STRING
                    {
                    dbg.location(30,3);
                    match(input,STRING,FOLLOW_STRING_in_definition152); 

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:31:4: BOOLEAN ( praedicats_ )?
                    {
                    dbg.location(31,4);
                    match(input,BOOLEAN,FOLLOW_BOOLEAN_in_definition158); 
                    dbg.location(31,12);
                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:31:12: ( praedicats_ )?
                    int alt6=2;
                    try { dbg.enterSubRule(6);
                    try { dbg.enterDecision(6, decisionCanBacktrack[6]);

                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==OP_LOGICAL) ) {
                        alt6=1;
                    }
                    } finally {dbg.exitDecision(6);}

                    switch (alt6) {
                        case 1 :
                            dbg.enterAlt(1);

                            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:31:12: praedicats_
                            {
                            dbg.location(31,12);
                            pushFollow(FOLLOW_praedicats__in_definition160);
                            praedicats_();

                            state._fsp--;


                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(6);}


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:32:4: ID definition__
                    {
                    dbg.location(32,4);
                    match(input,ID,FOLLOW_ID_in_definition166); 
                    dbg.location(32,7);
                    pushFollow(FOLLOW_definition___in_definition168);
                    definition__();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:33:4: '(' arith ')' ( arith_ | term_ )?
                    {
                    dbg.location(33,4);
                    match(input,36,FOLLOW_36_in_definition174); 
                    dbg.location(33,8);
                    pushFollow(FOLLOW_arith_in_definition176);
                    arith();

                    state._fsp--;

                    dbg.location(33,14);
                    match(input,37,FOLLOW_37_in_definition178); 
                    dbg.location(33,18);
                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:33:18: ( arith_ | term_ )?
                    int alt7=3;
                    try { dbg.enterSubRule(7);
                    try { dbg.enterDecision(7, decisionCanBacktrack[7]);

                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==39||LA7_0==41) ) {
                        alt7=1;
                    }
                    else if ( (LA7_0==38||LA7_0==42) ) {
                        alt7=2;
                    }
                    } finally {dbg.exitDecision(7);}

                    switch (alt7) {
                        case 1 :
                            dbg.enterAlt(1);

                            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:33:19: arith_
                            {
                            dbg.location(33,19);
                            pushFollow(FOLLOW_arith__in_definition181);
                            arith_();

                            state._fsp--;


                            }
                            break;
                        case 2 :
                            dbg.enterAlt(2);

                            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:33:28: term_
                            {
                            dbg.location(33,28);
                            pushFollow(FOLLOW_term__in_definition185);
                            term_();

                            state._fsp--;


                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(7);}


                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:34:4: INTEGER definition_
                    {
                    dbg.location(34,4);
                    match(input,INTEGER,FOLLOW_INTEGER_in_definition193); 
                    dbg.location(34,12);
                    pushFollow(FOLLOW_definition__in_definition195);
                    definition_();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    dbg.enterAlt(6);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:35:4: REAL definition_
                    {
                    dbg.location(35,4);
                    match(input,REAL,FOLLOW_REAL_in_definition201); 
                    dbg.location(35,9);
                    pushFollow(FOLLOW_definition__in_definition203);
                    definition_();

                    state._fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(8);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(36, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "definition");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "definition"



    // $ANTLR start "definition_"
    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:38:1: definition_ : ( arith_ | term_ ( arith_ )? | praedicate_ ( praedicats_ )? |);
    public final void definition_() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "definition_");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(38, 0);

        try {
            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:39:2: ( arith_ | term_ ( arith_ )? | praedicate_ ( praedicats_ )? |)
            int alt11=4;
            try { dbg.enterDecision(11, decisionCanBacktrack[11]);

            switch ( input.LA(1) ) {
            case 39:
            case 41:
                {
                alt11=1;
                }
                break;
            case 38:
            case 42:
                {
                alt11=2;
                }
                break;
            case OP_PRAEDICATE:
                {
                alt11=3;
                }
                break;
            case K_SEM:
                {
                alt11=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 11, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(11);}

            switch (alt11) {
                case 1 :
                    dbg.enterAlt(1);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:39:4: arith_
                    {
                    dbg.location(39,4);
                    pushFollow(FOLLOW_arith__in_definition_216);
                    arith_();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:39:13: term_ ( arith_ )?
                    {
                    dbg.location(39,13);
                    pushFollow(FOLLOW_term__in_definition_220);
                    term_();

                    state._fsp--;

                    dbg.location(39,19);
                    // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:39:19: ( arith_ )?
                    int alt9=2;
                    try { dbg.enterSubRule(9);
                    try { dbg.enterDecision(9, decisionCanBacktrack[9]);

                    int LA9_0 = input.LA(1);

                    if ( (LA9_0==39||LA9_0==41) ) {
                        alt9=1;
                    }
                    } finally {dbg.exitDecision(9);}

                    switch (alt9) {
                        case 1 :
                            dbg.enterAlt(1);

                            // E:\\GitDaten\\BAI4\\Compiler und Interpreter\\Praktikum 1\\minip.g:39:19: arith_
                            {
